--- a/Master 1/Quantitatif/Introduction aux méthodes statistiques/Convictions politiques & Partage des tâches ménagères.Rmd
+++ b/Master 1/Quantitatif/Introduction aux méthodes statistiques/Convictions politiques & Partage des tâches ménagères.Rmd
@@ -1,15 +1,21 @@
-# Introduction aux méthodes statistiques
+# Introduction aux méthodes statistiques #
 
-- Cours introductif aux opérations statistiques de base sur R, en utilisant l'environnement RStudio. Le travail final a été réalisé par groupes de 3 sur le questionnaire ISSP 2012 - Family and Changing Gender Roles IV.
-- Le Choix du sujet était libre, à partir du moment où les opérations étudiées en cours était utilisée pour produire un raisonnement sociologique. Le sujet choisi visait à croiser les convictions politiques d'un couple à leur répartition des tâches ménagère. Le but étant de vérifier l’existence d’un lien significatif entre les deux variables
+# Cours introductif aux opérations statistiques de base sur R, en utilisant l'environnement RStudio. 
+# Le travail final a été réalisé par groupes de 3 sur le questionnaire ISSP 2012 - Family and Changing Gender Roles IV.
+# Le Choix du sujet était libre, à partir du moment où les opérations étudiées en cours était utilisée pour produire un raisonnement sociologique. 
 
-## Importation & Nettoyage des données ##
+# Le sujet choisi visait à croiser les convictions politiques d'un couple à leur répartition des tâches ménagère. 
+# Le but étant de vérifier l’existence d’un lien significatif entre les deux variables
+
+# Importation & Nettoyage des données #
+
 
 library(foreign)
 library(questionr)
 library(forcats)
 library(clipr)
-dataTTL <- read.spss("C:/Users/gsprd/Documents/(2024-2025) - Sciences Po Rennes - M1/Cours/Introduction à R/Base de données - Cours M1/DATA.sav", to.data.fram = TRUE)
+
+dataTTL <- read.spss("C:/Users/gsprd/.../DATA.sav", to.data.fram = TRUE)
 dataFRA <- subset(dataTTL, V3 == "FR-France")
 
 ### Recodage en score CONS ###
