--- a/Master 1/Quantitatif/Introduction aux méthodes statistiques/Convictions politiques & Partage des tâches ménagères.Rmd
+++ b/Master 1/Quantitatif/Introduction aux méthodes statistiques/Convictions politiques & Partage des tâches ménagères.Rmd
@@ -1,14 +1,15 @@
-# Introduction aux méthodes statistiques #
+# Introduction aux méthodes statistiques
 
-# Cours introductif aux opérations statistiques de base sur R, en utilisant l'environnement RStudio. 
+
+### Cours introductif aux opérations statistiques de base sur R, en utilisant l'environnement RStudio. 
 # Le travail final a été réalisé par groupes de 3 sur le questionnaire ISSP 2012 - Family and Changing Gender Roles IV.
 # Le Choix du sujet était libre, à partir du moment où les opérations étudiées en cours était utilisée pour produire un raisonnement sociologique. 
 
 # Le sujet choisi visait à croiser les convictions politiques d'un couple à leur répartition des tâches ménagère. 
 # Le but étant de vérifier l’existence d’un lien significatif entre les deux variables
 
-# Importation & Nettoyage des données #
 
+# Importation & Nettoyage des données #
 
 library(foreign)
 library(questionr)
@@ -18,7 +19,7 @@ library(clipr)
 dataTTL <- read.spss("C:/Users/gsprd/.../DATA.sav", to.data.fram = TRUE)
 dataFRA <- subset(dataTTL, V3 == "FR-France")
 
-### Recodage en score CONS ###
+# Recodage #
 
 ## Recodage de dataFRA$V7 en dataFRA$V7_rec
 dataFRA$V7_rec <- dataFRA$V7 %>%
